vpc.tf
provider "aws" {region = "us-east-1"}

resource "aws_vpc" "carla-pilot-vpc" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support   = true
    enable_dns_hostnames = true
    tags       = {
        Name = "carla_pilot-vpc"
    }
}
